网路请求添加成功，准备Rxjava

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <style name="loading_theme" parent="Theme.IOSchedd">
         <item name="android:windowFullscreen">true</item>
-        <!--<item name="android:windowBackground">@drawable/bg_loading</item>-->
+        <item name="android:windowBackground">@drawable/bg_loading</item>
     </style>
 
     <style name="AppTheme.Fullscreen">
