--- a/app/src/main/res/layout/aty_loading.xml
+++ b/app/src/main/res/layout/aty_loading.xml
@@ -12,16 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        app:placeholderImage="@mipmap/ic_launcher"
-        app:placeholderImageScaleType="centerCrop"
-        app:viewAspectRatio="1.3" />
+        app:placeholderImage="@drawable/bg_loading"
+        app:placeholderImageScaleType="fitXY"
+        app:viewAspectRatio="0.6" />
 
     <TextView
         android:id="@+id/tv_show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:text="点击图片跳转"
+        android:layout_marginBottom="@dimen/d20"
+        android:text="@string/loading"
         android:textColor="@color/c_000000"
         android:textSize="@dimen/text_size_20" />
 
