--- a/app/src/main/res/layout/item_rxjava_learn_detail.xml
+++ b/app/src/main/res/layout/item_rxjava_learn_detail.xml
@@ -7,12 +7,19 @@
     android:orientation="vertical">
 
 
-    <Button
-        android:id="@+id/btn_show"
-        style="@style/home_main_text_style"
+    <TextView
+        android:id="@+id/tv_show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/d10"
-        tools:text="网络请求" />
+        android:layout_below="@id/rl_header"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/d5"
+        android:layout_marginTop="@dimen/d5"
+        android:background="@drawable/shape_corner_button"
+        android:paddingEnd="@dimen/d5"
+        android:paddingStart="@dimen/d5"
+        android:textColor="@color/c_000000"
+        android:textSize="@dimen/text_size_16"
+        tools:text="显示" />
 
 </RelativeLayout>
