--- a/app/src/main/res/layout/item_rxjava_learn_detail.xml
+++ b/app/src/main/res/layout/item_rxjava_learn_detail.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="@dimen/d5"
         android:layout_marginTop="@dimen/d5"
         android:background="@drawable/shape_corner_button"
+        android:gravity="center"
         android:paddingEnd="@dimen/d5"
         android:paddingStart="@dimen/d5"
         android:textColor="@color/c_000000"
