Rxjava 过滤操作，准备组合操作

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,7 +33,7 @@
     <color name="c_cdeea7">#cdeea7</color>
     <color name="c_cee9f4">#cee9f4</color>
     <color name="c_454859">#454859</color>
-    <color name="c_eeeeee">#eeeeee</color>
+    <color name="c_eeeeee">#eeeeee</color>black50
     <color name="c_696969">#696969</color>
     <color name="c_f4c41f">#f4c41f</color>
     <color name="c_e6e6e6">#e6e6e6</color>
