添加了一个动画

--- a/app/src/main/res/layout/aty_main.xml
+++ b/app/src/main/res/layout/aty_main.xml
@@ -45,6 +45,14 @@
                 android:layout_below="@+id/btn_desc_rxjava"
                 android:text="image图片" />
 
+            <Button
+                android:id="@+id/btn_animator"
+                style="@style/home_main_text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btn_desc_image"
+                android:text="动画" />
+
         </RelativeLayout>
     </ScrollView>
 
