--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,5 +56,6 @@
     <color name="defDividerColor">#11000000</color>
     <color name="defDialogColor">#FFE74C3C</color>
     <color name="dialog_bg">#FFFFFFFF</color>
+    <color name="c_f5b100">#f5b100</color>
 
 </resources>
