--- a/app/src/main/res/layout/aty_animator.xml
+++ b/app/src/main/res/layout/aty_animator.xml
@@ -10,42 +10,19 @@
         android:id="@+id/rl_header"
         layout="@layout/include_header" />
 
-    <Button
-        android:id="@+id/btn_play"
-        style="@style/home_main_text_style"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab"
+        style="@style/TabLayoutStyle.TabLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rl_header"
-        android:text="play" />
+        android:layout_centerHorizontal="true" />
 
-
-    <RelativeLayout
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_animator"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/d20">
-
-        <ImageView
-            android:id="@+id/iv_coin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/tv_price"
-            android:src="@drawable/coin_black" />
-
-        <TextView
-            android:id="@+id/tv_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/d20"
-            android:text="13"
-            android:textColor="@color/c_000000" />
-
-    </RelativeLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tab" />
 
 
 </RelativeLayout>
