--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -80,5 +80,26 @@
         <item name="android:layout_marginTop">@dimen/d10</item>
     </style>
 
+    <style name="BaseWidget.Design.TabLayout" parent="android:Widget">
+        <item name="tabIndicatorColor">@color/c_f5b100</item>
+        <item name="tabIndicatorHeight">@dimen/d2</item>
+        <item name="tabPaddingStart">@dimen/d10</item>
+        <item name="tabPaddingEnd">@dimen/d10</item>
+        <item name="tabBackground">?attr/selectableItemBackground</item>
+        <item name="tabTextAppearance">@style/TabTextAppearance</item>
+        <item name="tabSelectedTextColor">@color/c_f5b100</item>
+    </style>
+
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">@dimen/text_size_18</item>
+        <item name="android:textColor">@color/c_000000</item>
+        <item name="textAllCaps">true</item>
+    </style>
+
+    <style name="TabLayoutStyle.TabLayout" parent="BaseWidget.Design.TabLayout">
+        <item name="tabGravity">center</item>
+        <item name="tabMode">scrollable</item>
+    </style>
+
 
 </resources>
