--- a/app/src/main/res/layout/include_header.xml
+++ b/app/src/main/res/layout/include_header.xml
@@ -47,6 +47,19 @@
         android:visibility="gone" />
 
 
+    <ImageButton
+        android:id="@+id/ib_call_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="@color/transparent"
+        android:paddingEnd="@dimen/d10"
+        android:paddingStart="@dimen/d10"
+        android:src="@drawable/icon_call_phone"
+        android:visibility="gone" />
+
+
     <ImageView
         android:id="@+id/iv_line"
         android:layout_width="match_parent"
