--- a/app/src/main/res/layout/frg_value.xml
+++ b/app/src/main/res/layout/frg_value.xml
@@ -6,9 +6,9 @@
 
     <LinearLayout
         android:id="@+id/ll_header"
-        android:layout_marginTop="@dimen/d5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/d5">
 
         <TextView
             android:id="@+id/tv_play_int"
@@ -50,5 +50,45 @@
         android:layout_height="@dimen/d100"
         android:layout_below="@+id/ll_header"
         android:src="@drawable/image_datong_logo" />
+
+    <TextView
+        android:id="@+id/tv_show"
+        android:layout_width="wrap_content"
+        android:background="@color/c_4F99F0"
+        android:padding="@dimen/d10"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="显示" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="@dimen/d5">
+
+        <TextView
+            android:id="@+id/tv_inter"
+            style="@style/text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="插值器" />
+
+        <TextView
+            android:id="@+id/tv_evalutor"
+            style="@style/text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:text="evalutor" />
+
+        <TextView
+            android:id="@+id/tv_argb"
+            style="@style/text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:text="argbevalutor" />
+
+    </LinearLayout>
 
 </RelativeLayout>
