--- a/app/src/main/res/layout/frg_property_keyframe.xml
+++ b/app/src/main/res/layout/frg_property_keyframe.xml
@@ -4,93 +4,106 @@
     android:layout_height="match_parent"
     android:background="@color/c_FFFFFF">
 
-    <LinearLayout
-        android:id="@+id/ll_header"
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/d5"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_play_int"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="property" />
-
-        <TextView
-            android:id="@+id/tv_play_z"
-            style="@style/text_style"
+        <LinearLayout
+            android:id="@+id/ll_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d5"
-            android:text="propertyObject" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_play_x"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="FrameCall" />
+            <TextView
+                android:id="@+id/tv_play_int"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="property" />
 
-        <TextView
-            android:id="@+id/tv_play_y"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="FrameNoInter" />
+            <TextView
+                android:id="@+id/tv_play_z"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="propertyObject" />
 
-        <TextView
-            android:id="@+id/tv_trans_x"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="FrameInter" />
+            <TextView
+                android:id="@+id/tv_play_x"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="FrameCall" />
 
-        <TextView
-            android:id="@+id/tv_trans_y"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="FrameZero" />
+            <TextView
+                android:id="@+id/tv_play_y"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="FrameNoInter" />
 
-        <TextView
-            android:id="@+id/tv_scale_x"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="FrameLast" />
+            <TextView
+                android:id="@+id/tv_trans_x"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="FrameInter" />
 
-        <TextView
-            android:id="@+id/tv_scale_y"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="FrameBetween" />
+            <TextView
+                android:id="@+id/tv_trans_y"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="FrameZero" />
 
-        <TextView
-            android:id="@+id/tv_object"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="FrameObject" />
+            <TextView
+                android:id="@+id/tv_scale_x"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="FrameLast" />
 
-        <TextView
-            android:id="@+id/tv_cancel"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="cancel" />
+            <TextView
+                android:id="@+id/tv_scale_y"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="FrameBetween" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_object"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="FrameObject" />
+
+            <TextView
+                android:id="@+id/tv_arrow"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="arrow" />
+
+            <TextView
+                android:id="@+id/tv_cancel"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="cancelAnimator" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
     <ImageView
@@ -147,63 +160,92 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/image_phone" />
 
-    <LinearLayout
-        android:id="@+id/ll_bottom"
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/d5"
-        android:gravity="right"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true">
 
-
-        <TextView
-            android:id="@+id/tv_pva"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="pva圆" />
-
-        <TextView
-            android:id="@+id/tv_inter"
-            style="@style/text_style"
+        <LinearLayout
+            android:id="@+id/ll_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d5"
-            android:text="插值器" />
+            android:gravity="right"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_argb"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="arg arg" />
 
-        <TextView
-            android:id="@+id/tv_arg"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="arg Int" />
+            <TextView
+                android:id="@+id/tv_pva"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="playSequence" />
 
-        <TextView
-            android:id="@+id/tv_num"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="num" />
+            <TextView
+                android:id="@+id/tv_inter"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="playTogether" />
 
-        <TextView
-            android:id="@+id/tv_arrow"
-            style="@style/text_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
-            android:text="arrow" />
+            <TextView
+                android:id="@+id/tv_argb"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="setBuilder" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_arg"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="setListener" />
+
+            <TextView
+                android:id="@+id/tv_num"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="setProperty" />
+
+            <TextView
+                android:id="@+id/tv_cancel_set"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="cancelSetA" />
+
+            <TextView
+                android:id="@+id/tv_value_an"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="playxmlValue" />
+
+            <TextView
+                android:id="@+id/tv_object_an"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="playxmlObject" />
+
+            <TextView
+                android:id="@+id/tv_set_an"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d5"
+                android:text="playxmlSet" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
