--- a/app/src/main/res/layout/frg_others.xml
+++ b/app/src/main/res/layout/frg_others.xml
@@ -78,5 +78,39 @@
 
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/menu"
+        style="@style/MenuStyle"
+        android:background="@drawable/icon_menu_image"/>
+
+    <Button
+        android:id="@+id/item1"
+        style="@style/MenuItemStyle"
+        android:background="@drawable/icon_menu_circle1"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/item2"
+        style="@style/MenuItemStyle"
+        android:background="@drawable/icon_menu_circle2"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/item3"
+        style="@style/MenuItemStyle"
+        android:background="@drawable/icon_menu_circle3"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/item4"
+        style="@style/MenuItemStyle"
+        android:background="@drawable/icon_menu_circle4"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/item5"
+        style="@style/MenuItemStyle"
+        android:background="@drawable/icon_menu_circle5"
+        android:visibility="gone"/>
 
 </RelativeLayout>
