--- a/app/src/main/res/layout/aty_main.xml
+++ b/app/src/main/res/layout/aty_main.xml
@@ -62,6 +62,14 @@
                 android:layout_below="@+id/btn_animator"
                 android:text="Login" />
 
+            <Button
+                android:id="@+id/btn_define_view"
+                style="@style/home_main_text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btn_login"
+                android:text="自定义View" />
+
         </RelativeLayout>
     </ScrollView>
 
