--- a/app/src/main/res/layout/frg_define_view1.xml
+++ b/app/src/main/res/layout/frg_define_view1.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/c_FFFFFF"
     android:orientation="vertical">
 
-</LinearLayout>
+    <com.mao.cn.learnDevelopProject.wedget.difineview.study.MeasureView1Start
+        android:id="@+id/define_s"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/c_ff4D30" />
+
+    <com.mao.cn.learnDevelopProject.wedget.difineview.study.MeasureView1CanvasAndPaint
+        android:layout_width="@dimen/d100"
+        android:layout_height="@dimen/d100"
+        android:layout_below="@+id/define_s" />
+
+</RelativeLayout>
