--- a/app/src/main/res/layout/aty_stringspanner_click.xml
+++ b/app/src/main/res/layout/aty_stringspanner_click.xml
@@ -18,4 +18,23 @@
         android:textSize="@dimen/text_size_16"
         tools:text="this is a boy" />
 
+
+    <com.mao.cn.learnDevelopProject.wedget.spannerString.AnnotationTextView
+        android:id="@+id/atv_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_show_content"
+        android:text="测试"
+        android:textColor="@color/c_000000"
+        android:textSize="@dimen/text_size_25" />
+
+    <com.mao.cn.learnDevelopProject.wedget.spannerString.SPAnnotationTextView
+        android:id="@+id/sp_atv_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/atv_content"
+        android:text="测试"
+        android:textColor="@color/c_000000"
+        android:textSize="@dimen/text_size_25" />
+
 </RelativeLayout>
