单词可以点，完成一部分，准备集成字典

--- a/app/src/main/res/layout/aty_stringspanner_click.xml
+++ b/app/src/main/res/layout/aty_stringspanner_click.xml
@@ -37,4 +37,15 @@
         android:textColor="@color/c_000000"
         android:textSize="@dimen/text_size_25" />
 
+
+    <com.mao.cn.learnDevelopProject.wedget.spannerString.SPAnnotationTextView
+        android:layout_marginTop="@dimen/d20"
+        android:id="@+id/sp_atv_content_point"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sp_atv_content"
+        android:text="测试"
+        android:textColor="@color/c_000000"
+        android:textSize="@dimen/text_size_25" />
+
 </RelativeLayout>
