--- a/app/src/main/res/layout/frg_define_view3.xml
+++ b/app/src/main/res/layout/frg_define_view3.xml
@@ -16,4 +16,24 @@
         android:layout_height="200dp"
         android:layout_below="@+id/define_s" />
 -->
+
+    <com.skyfishjy.library.RippleBackground
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="@dimen/d60"
+        android:layout_height="@dimen/d60"
+        android:id="@+id/content"
+        app:rb_color="#0099CC"
+        app:rb_radius="@dimen/d15"
+        app:rb_rippleAmount="4"
+        app:rb_duration="3000"
+        app:rb_scale="2">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:id="@+id/centerImage"
+            android:src="@drawable/icon_achievement_gold"/>
+    </com.skyfishjy.library.RippleBackground>
+
 </RelativeLayout>
