--- a/app/src/main/res/layout/frg_define_view2.xml
+++ b/app/src/main/res/layout/frg_define_view2.xml
@@ -5,24 +5,12 @@
     android:background="@color/c_FFFFFF"
     android:orientation="vertical">
 
-    <com.mao.cn.learnDevelopProject.wedget.difineview.study.MeasureView1Start
+    <com.mao.cn.learnDevelopProject.wedget.difineview.study.MeasureView1CanvasAndPaint
         android:id="@+id/define_s"
+        android:layout_marginTop="@dimen/d20"
+        android:layout_marginStart="@dimen/d20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/c_ff4D30"/>
+        android:background="@color/c_4F99F0"/>
 
-    <TextView
-        android:background="@color/c_4F99F0"
-        android:layout_marginTop="@dimen/d200"
-        android:layout_width="@dimen/d200"
-        android:layout_height="@dimen/d200" />
-
-
-
-
-    <!--<com.mao.cn.learnDevelopProject.wedget.difineview.study.MeasureView1CanvasAndPaint
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_below="@+id/define_s" />
--->
 </RelativeLayout>
