--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,6 @@
     <color name="white60">#99FFFFFF</color>
     <color name="white80">#ccFFFFFF</color>
 
-    <color name="black50">#FF323232</color>
-    <color name="black80">#CC000000</color>
-    <color name="black70">#B2000000</color>
-    <color name="black90">#E5000000</color>
     <color name="transparent85">#21000000</color>
     <color name="transparent">#00000000</color>
     <color name="c_72000000">#72000000</color>
@@ -33,7 +29,7 @@
     <color name="c_cdeea7">#cdeea7</color>
     <color name="c_cee9f4">#cee9f4</color>
     <color name="c_454859">#454859</color>
-    <color name="c_eeeeee">#eeeeee</color>black50
+    <color name="c_eeeeee">#eeeeee</color>
     <color name="c_696969">#696969</color>
     <color name="c_f4c41f">#f4c41f</color>
     <color name="c_e6e6e6">#e6e6e6</color>
@@ -57,5 +53,29 @@
     <color name="defDialogColor">#FFE74C3C</color>
     <color name="dialog_bg">#FFFFFFFF</color>
     <color name="c_f5b100">#f5b100</color>
+
+
+    <!--黑色的透明度-->
+    <color name="black00">#00000000</color>
+    <color name="black05">#0D000000</color>
+    <color name="black10">#1A000000</color>
+    <color name="black15">#26000000</color>
+    <color name="black20">#33000000</color>
+    <color name="black25">#40000000</color>
+    <color name="black30">#4D000000</color>
+    <color name="black35">#59000000</color>
+    <color name="black40">#66000000</color>
+    <color name="black45">#73000000</color>
+    <color name="black50">#80000000</color>
+    <color name="black55">#8C000000</color>
+    <color name="black60">#99000000</color>
+    <color name="black65">#A6000000</color>
+    <color name="black70">#B3000000</color>
+    <color name="black75">#BF000000</color>
+    <color name="black80">#CC000000</color>
+    <color name="black85">#D9000000</color>
+    <color name="black90">#E6000000</color>
+    <color name="black95">#F2000000</color>
+    <color name="black100">#ff000000</color>
 
 </resources>
